CA-RPS LFA: Dark Mode fix

--- a/More/Logfile Analyzer Styling Data.css
+++ b/More/Logfile Analyzer Styling Data.css
@@ -554,6 +554,9 @@
 			stroke: black;
 			stroke-width: 0.5;
 		}
+		svg.ca-rps image[href*="Scissors"] { 
+			filter: invert(87%);
+		}
 /* Character Slots */
 	span.character-slots-underline {
 		text-decoration: underline;
